# opengl_game

./: .gitignore  CMakeLists.txt  Readme.md  callbacks.h  camera.h  main.cpp  object.h  particles.h  plane.h  shader.h  texture.h  utils.h
report/: template.tex
shaders/: CUBE_MAP.frag  CUBE_MAP.vert  LIGHT.frag  LIGHT.vert  PARTICLE.frag  PARTICLE.vert
